# smart-doc-analyzer

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  example.py  gerar_relatorio.py  pyproject.toml  routes_example.json  test_llm.py  test_quick.py
doc_analyzer/: __init__.py  core.py  profile.py
doc_analyzer/analyzers/: __init__.py  base.py  image.py  pdf.py
doc_analyzer/router/: __init__.py  base.py  llm_router.py  ollama_router.py  rule_based.py
